--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,22 +1,48 @@
 security:
-    # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
+    encoders:
+        App\Entity\User: bcrypt
+
     providers:
-        in_memory: { memory: ~ }
+        database_users:
+            entity: { class: App\Entity\User, property: email }
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
         main:
+            pattern: ^/
+
             anonymous: true
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#firewalls-authentication
+            form_login:
+                check_path: login
+                login_path: login
+                csrf_token_generator: security.csrf.token_manager
+                default_target_path: product_types
 
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
+            logout:
+                path: logout
+                target: login
 
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
+            guard:
+                authenticators:
+                    - App\Security\LoginFormAuthenticator
+
     access_control:
+        - { path: ^/product-types, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/diagnostic, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/discounts, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/products, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         # - { path: ^/admin, roles: ROLE_ADMIN }
+        # - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        # - { path: ^/signup/.*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        # - { path: ^/password/.*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        # - { path: ^/logout, roles: IS_AUTHENTICATED_FULLY }
+        # - { path: ^/api-access, roles: ROLE_USER }
+        # - { path: ^/bucket*, roles: ROLE_USER }
+        # - { path: ^/invoices*, roles: ROLE_USER }
         # - { path: ^/profile, roles: ROLE_USER }
+        # - { path: ^/payment-settings, roles: ROLE_USER }
