--- a/package.json
+++ b/package.json
@@ -8,15 +8,13 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
-    "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
     "gulp-imagemin": "^6.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
-    "gulp-uglifyjs": "^0.6.2",
+    "gulp-uglify-es": "^1.0.4",
     "imagemin-pngquant": "^8.0.0",
     "uglify-es": "github:mishoo/UglifyJS2#harmony"
   },
